fixed string parameter assugnment (coping instead of asigning pointer to buffer) (BUG#1115) fixed test_field_misc (UTF variable value)

sql/item.cc:
  added debug informetion
  fixed string parameter assugnment (coping instead of asigning pointer to buffer)
tests/client_test.c:
  test for BUG#1115
  fixed test_field_misc (UTF variable value)